# Universal-Controller-Script

./: .coveragerc  .flake8  .gitignore  .gitmodules  .mypy.ini  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  build.py  config.py  coverage.sh  development_setup_macos_linux.sh  development_setup_windows.ps1  device_eventforward.py  device_universal.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  plugin-support-request.md
.github/workflows/: build.yml  python-app.yml  release.yml
bootstrap/: __init__.py  contextmanager.py  defaultconfig.py  settings.py  util.py
common/: __init__.py  activitystate.py  consts.py  contextmanager.py  defaultconfig.py  devicedetect.py  eventpattern.py  exceptions.py  extensionmanager.py  mainstate.py  matchedevent.py  scriptstate.py  settings.py  util.py
common/eventpattern/: __init__.py  basicpattern.py  bytematch.py  forwardedpattern.py  ieventpattern.py  notepattern.py  nullpattern.py  unionpattern.py
common/logger/: __init__.py  log_hierarchy.py  logger.py  logitem.py  verbosity.py
common/profiler/: __init__.py  manager.py  profilecontext.py
common/states/: __init__.py  devicedetect.py  devstate.py  forwardstate.py  mainstate.py  notrecognised.py  scriptstate.py
common/types/: __init__.py  color.py  eventdata.py
common/util/: __init__.py  apifixes.py  consolehelpers.py  dicttools.py  eventdata.py  events.py  hotreload.py  misc.py  snap.py
controlsurfaces/: __init__.py  aftertouch.py  button.py  consts.py  controlmapping.py  controlshadow.py  controlsurface.py  drumpad.py  encoder.py  event.py  fader.py  faderbutton.py  hintmsg.py  jog.py  knob.py  macrobutton.py  navigation.py  note.py  nullevent.py  pedal.py  transport.py  wheels.py
controlsurfaces/controlgenerators/: __init__.py
devices/: __init__.py  controlmatcher.py  device.py  deviceshadow.py
docs/: CONTRIBUTING.md  README.md  configuration.md  roadmap.md  setup.md  usage.md
events/: __init__.py
include/: __init__.py  abc.py  typing.py  typing_extensions.py
logger/: __init__.py  log_hierarchy.py  logger.py  logitem.py  verbosity.py
logging/: log_hierarchy.py  logger.py  logitem.py
plugins/: __init__.py  plugin.py
plugs/: __init__.py  plugin.py
resources/: docstring_template.mustache
src/: config.py  consts.py  device_event_forward.py  device_eventforward.py  device_universal.py  version_check.py
tests/: __init__.py  color_test.py  devices_test.py  event_test.py  filter_test.py  forward_test.py  grid_mapper_test.py  helpers.py  log_test.py  profiler_test.py  test_color.py  test_devices.py  test_event.py  test_eventpattern.py  test_forward.py  test_log.py  test_util.py  util_test.py
(+666 files in other folders)
