[tool.poetry]
name = "universal-controller-script"
version = "1.2.1"
description = "A free and open source program that integrates with FL Studio to provide deep integration between hardware controllers and software."
authors = ["Maddy Guthridge <hello@maddyguthridge.com>"]
license = "GPL v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.1"
fl-studio-api-stubs = "^33.2.0"
typing-extensions = "^4.12.2"
jestspectation = "^1.4.3"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.1"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.11.2"
pytest = "^8.3.2"
autopep8 = "^2.3.1"
jestspectation = "^1.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
